Update Dockerfile and GitHub Actions workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,31 +1,27 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main
+      - main  
 
 jobs:
   build:
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest  
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2  
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2  
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}  
+        password: ${{ secrets.DOCKER_PASSWORD }}  
 
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-docker-
-
-      - name: Build Docker Image
-        run: |
-          docker build -t your-image-name .
-          docker push your-image-name
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v3  
+      with:
+        context: .  
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest  
