--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,11 +13,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2  
 
+    - name: Logout from Docker (if logged in)
+      run: docker logout || true
+
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2  
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}  
-        password: ${{ secrets.DOCKER_PASSWORD }}  
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Validate Docker Login
+      run: docker info 
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v3  
