--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,31 +3,28 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  
+  docker:
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Logout from Docker (if logged in)
-      run: docker logout || true
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-       username: ${{ secrets.DOCKER_USERNAME }}
-       password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Add GitHub to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-    - name: Validate Docker Login
-      run: docker info 
+      - name: Build Docker image
+        run: docker build -t your_image_name .
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3  
-      with:
-        context: .  
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest  
+      - name: Push Docker image
+        run: docker push your_image_name
