--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,27 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Стъпка 1: Клониране на репозитория с SSH
       - name: Checkout repository using SSH
         uses: actions/checkout@v3
         with:
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-key: ${{ secrets.build-action }}
       
-      # Стъпка 2: Създаване на Docker образ
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Стъпка 3: Логване в Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Стъпка 4: Билдване на Docker образ
       - name: Build Docker image
         run: docker build -t your_dockerhub_username/your_image_name .
 
-      # Стъпка 5: Push на Docker образа
       - name: Push Docker image
         run: docker push your_dockerhub_username/your_image_name
