--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,14 +18,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ myurukov573 }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t chechenec/monster-land-app .
+        run: docker build -t ghcr.io/${{ myurukov573 }}/monster-land-app:latest .
 
       - name: Push Docker image
-        run: docker push chechenec/monster-land-app
+        run: docker push ghcr.io/${{ myurukov573 }}/monster-land-app:latest
+      
