--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ myurukov573 }}
+          username: myurukov573
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ myurukov573 }}/monster-land-app:latest .
+        run: docker build -t ghcr.io/myurukov573/monster-land-app:latest .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ myurukov573 }}/monster-land-app:latest
+        run: docker push ghcr.io/myurukov573/monster-land-app:latest
       
