--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
+          registry: ghcr.io
           username: myurukov573
           password: ${{ secrets.GHCR_TOKEN }}
 
