--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -8,6 +8,13 @@
     container_name: "monster-land"
 
   tasks:
+    - name: Sync latest code from GitHub repo
+      ansible.builtin.git:
+        repo: https://github.com/myurukov573/monster-land.git
+        dest: /opt/monster-land
+        version: main
+        force: yes
+
     - name: Log in to GHCR
       community.docker.docker_login:
         registry_url: ghcr.io
