--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -14,7 +14,7 @@
         dest: /opt/monster-land
         version: main
         force: yes
-        
+
     - name: Log in to GHCR
       community.docker.docker_login:
         registry_url: ghcr.io
@@ -35,3 +35,28 @@
         restart_policy: always
         ports:
           - "80:3000"
+
+    - name: Wait for container to be reachable on port 80
+      ansible.builtin.wait_for:
+        host: "127.0.0.1"
+        port: 80
+        timeout: 30
+
+    - name: Health check – check if app returns 200 OK
+      ansible.builtin.uri:
+        url: http://localhost:80/health
+        method: GET
+        status_code: 200
+        return_content: yes
+      register: healthcheck_response
+      failed_when: healthcheck_response.status != 200
+
+    - name: Show health check result
+      debug:
+        msg: "Health check returned status: {{ healthcheck_response.status }}"
+
+    - name: Rollback if health check failed
+      community.docker.docker_container:
+        name: "{{ container_name }}"
+        state: stopped
+      when: healthcheck_response.status != 200
