Add new jenkins agent

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,12 @@
 pipeline {
-    agent any
+    agent { label 'jenkins-agent-1' }
+  stages {
+    stage('Deploy') {
+      steps {
+        sh 'echo Hello from Jenkins Agent!'
+      }
+    }
+  }
 
     environment {
         IMAGE_NAME = "ghcr.io/myurukov573/monster-land"
