--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,3 @@
-[web]
-37.27.251.233 ansible_user=deploy ansible_ssh_private_key_file=~/.ssh/deploy_key
+[servers]
+37.27.251.233 ansible_user=jenkins-agent-1 ansible_ssh_private_key_file=~/.ssh/jenkins_agent_key
+
