new Copy create

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -45,7 +45,7 @@
 
     - name: Copy Jenkins backup script
       ansible.builtin.copy:
-        src: "files/jenkins_backup.sh"
+        src: "files/jenkins-backup.sh"
         dest: "{{ backup_script_path }}"
         mode: '0755'
         force: true
