inventory.ini changed

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,2 @@
-[servers]
-37.27.251.233 ansible_user=jenkins-agent-1 ansible_ssh_private_key_file=~/.ssh/jenkins_agent_key
-
+[jenkins]
+37.27.251.233 ansible_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa
