--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
-[jenkins]
-37.27.251.233 ansible_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa
+[remote]
+37.27.251.233 ansible_user=root ansible_ssh_private_key_file=/home/jenkins-agent-1/.ssh/jenkins_agent_key
