--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,1 @@
-[remote]
-37.27.251.233 ansible_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa
+37.27.251.233 ansible_user=root ansible_ssh_private_key_file=/home/jenkins-agent-1/.ssh/jenkins_agent_key
